[gd_scene load_steps=5 format=3 uid="uid://dgxwpoqusqgo1"]

[ext_resource type="FontFile" uid="uid://bkiga6cr523aq" path="res://AngelFolder/Font/BirchStd.otf" id="1_n31r1"]
[ext_resource type="Script" uid="uid://b1kgwj6g05tcv" path="res://AngelFolder/Scripts/Settings.gd" id="1_vxe1v"]

[sub_resource type="Theme" id="Theme_yrknh"]

[sub_resource type="Theme" id="Theme_flfri"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_vxe1v")

[node name="MainSettings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -469.0
offset_top = -295.0
offset_right = 469.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title Container" type="PanelContainer" parent="MainSettings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 25.0
offset_right = 93.0
offset_bottom = 103.0
grow_horizontal = 2

[node name="Label" type="Label" parent="MainSettings/Title Container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 75
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="MainSettings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = -192.0
offset_right = 309.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yrknh")

[node name="MarginContainer" type="MarginContainer" parent="MainSettings/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainSettings"]
layout_mode = 2
offset_left = 180.0
offset_top = 119.0
offset_right = 694.0
offset_bottom = 466.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 40
text = "Video"

[node name="FullscreenCheck" type="CheckBox" parent="MainSettings/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="Label2" type="Label" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 40
text = "Audio"

[node name="Label3" type="Label" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MainSettings/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="MainSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MainSettings/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 25
text = "SFX Volume"

[node name="Seperator" type="Control" parent="MainSettings/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MainSettings/VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeSlider" type="HSlider" parent="MainSettings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MainSettings/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label5" type="Label" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 25
text = "Keybinding"

[node name="HBoxContainer3" type="HBoxContainer" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Control" type="Control" parent="MainSettings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MainSettings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_flfri")
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 35
text = "Configure Keybinds"

[node name="HBoxContainer4" type="HBoxContainer" parent="MainSettings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Control" type="Control" parent="MainSettings/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Button" type="Button" parent="MainSettings/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_flfri")
theme_override_fonts/font = ExtResource("1_n31r1")
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="toggled" from="MainSettings/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="drag_ended" from="MainSettings/VBoxContainer/HBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="drag_ended" from="MainSettings/VBoxContainer/HBoxContainer2/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="pressed" from="MainSettings/VBoxContainer/HBoxContainer4/Button" to="." method="_on_button_pressed"]
